tests/baselines/reference/contextualTyping30.errors.txt
tests/cases/compiler/contextualTyping30.ts(1,37): error TS2345: Argument of type '[1, "a"]' is not assignable to parameter of type 'number[]'.
  Types of property 'push' are incompatible.
    Type '(...items: (1 | "a")[]) => number' is not assignable to type '(...items: number[]) => number'.
      Types of parameters 'items' and 'items' are incompatible.
        Type 'number' is not assignable to type '1 | "a"'.


==== tests/cases/compiler/contextualTyping30.ts (1 errors) ====
    function foo(param:number[]){}; foo([1, "a"]);
                                        ~~~~~~~~
!!! error TS2345: Argument of type '[1, "a"]' is not assignable to parameter of type 'number[]'.
!!! error TS2345:   Types of property 'push' are incompatible.
!!! error TS2345:     Type '(...items: (1 | "a")[]) => number' is not assignable to type '(...items: number[]) => number'.
!!! error TS2345:       Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:         Type 'number' is not assignable to type '1 | "a"'.